# cpp-tcp-sockets

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  client.cpp  server.cpp
